# my-idf-examples

./: .gitignore  README.md
part-1/_my-examples-part-1/: part-1.code-workspace
part-1/console/advanced/: CMakeLists.txt  Makefile  README.md  README_2.md
part-1/console/advanced/components/CatB_console_library/: CMakeLists.txt  CatB_console_library.c  Kconfig
part-1/console/advanced/components/CatB_console_library/include/: cmd_decl.h
part-1/console/backup/: advanced-2022.02.17-07.59-集成了基础控制台.7z
part-1/ext_flash_fatfs/: README.md
part-1/fast_scan/main/: fast_scan.c
part-1/i2c_tools/: README.md
part-1/i2c_tools/main/: cmd_i2ctools.c
part-1/i2s_es8311/: partitions.csv
part-1/i2s_es8311/components/: 1abf43d5-fc7c-4da3-a384-2095ca848fb4.tgz
part-1/i2s_es8311/main/: No242.pkf  No2422222.pkf  No242_1.pkf  canon - 24.pcm  canon.pcm  i2s_es8311_example.c
part-1/icmp_echo/: README.md
part-1/iperf/: README.md
part-1/iperf/main/: cmd_wifi.c  iperf_example_main.c
part-1/ir_protocols/: README.md
part-1/ir_protocols/main/: Kconfig.projbuild
part-1/lcd/i80_controller/main/: CMakeLists.txt  Kconfig.projbuild  i80_controller_example_main.c
part-1/lcd/rgb_panel/main/: CMakeLists.txt  lvgl_demo_ui.c  rgb_lcd_example_main.c
part-1/nmea0183_parser/: README.md
part-1/screen/: CMakeLists.txt
part-1/tusb_console/: README.md
part-1/tusb_sample_descriptor/: README.md
part-2/_my-examples-part-2/: part-2.code-workspace
part-2/pipeline_raw_http/: sdkconfig.defaults
part-2/pipeline_wav_amr_sdcard/: sdkconfig.defaults  sdkconfig12121
(+82 files in other folders)
